# lserp_customization

./: .gitignore  README.md  install_lserp_app.sh  package.json  pyproject.toml  scaffold.py  sync.ps1
lserp_customization/: api.py  boot.py  hooks.py  modules.txt
lserp_customization/config/: desktop.py  docs.py
lserp_customization/fixtures/: lserp_brand_theme.json
lserp_customization/lserp_customization/doctype/lserp_brand_theme/: lserp_brand_theme.json  lserp_brand_theme.py
lserp_customization/lserp_customization/doctype/lserp_theme_settings/: lserp_theme_settings.js  lserp_theme_settings.json  lserp_theme_settings.py
lserp_customization/lserp_customization/workspace/lserp_customization/: lserp_customization.json
lserp_customization/public/: build.json
lserp_customization/public/js/: lserp_theme_injector.bundle.js  lserp_theme_injector.js
